--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "devDependencies": {
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.13",
+    "install": "^0.13.0",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.6"
   }
 }
